[package]
name = "rsUmbral"
version = "0.0.1"
authors = ["miker83z <mikerz83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.0"
chacha20poly1305 = "0.5.1"
orion = "0.15.2"
crypto_api_blake2 = "0.1.3"
openssl = "0.10.29"
getrandom = "0.2"