[package]
name = "umbral-rs"
version = "0.0.3"
authors = ["disnocen <fadi.barbara@unito.it>", "miker83z <mikerz83@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/miker83z/umbral-rs"
documentation = "https://docs.rs/umbral-rs"
categories = ["cryptography", "algorithms"]
keywords = ["cryptography", "proxy-re-encryption", "PRE", "threshold", "secret-sharing"]
description = "A pure-Rust implementation of the Umbral threshold Proxy Re-encryption scheme"
edition = "2018"

[dependencies]
quick-error = "2.0.0"
chacha20poly1305 = "0.10.1"
openssl = "0.10.45"
getrandom = "0.2"
hkdf = "0.9.0"
blake2 = "0.9.2"
sha2 = "0.9.6"
sha3 = "0.9.1"
aead = "0.5.1"
hex-literal = "0.3.4"
rand = "0.8.3" 
modinverse = "0.1.0" 
